changes to previous workbooks

--- a/lectures/201-Lecuyer-lectures/01_intro.ipynb
+++ b/lectures/201-Lecuyer-lectures/01_intro.ipynb
@@ -2530,21 +2530,12 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python [conda env:cpsc330]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cpsc330-py"
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "name": "python"
   }
  },
  "nbformat": 4,
