--- a/lectures/201-Lecuyer-lectures/05_preprocessing-pipelines.ipynb
+++ b/lectures/201-Lecuyer-lectures/05_preprocessing-pipelines.ipynb
@@ -338,7 +338,9 @@
    ],
    "source": [
     "dummy = DummyClassifier(strategy=\"most_frequent\")\n",
+    "\n",
     "scores = cross_validate(dummy, X_train, y_train, return_train_score=True)\n",
+    "dummy_scores = cross_validate(dummy, X_train, y_train, return_train_score = True)\n",
     "print(\"Mean validation score %0.3f\" % (np.mean(scores[\"test_score\"])))\n",
     "pd.DataFrame(scores)"
    ]
@@ -443,6 +445,7 @@
    "source": [
     "knn = KNeighborsClassifier()\n",
     "scores = cross_validate(knn, X_train, y_train, return_train_score=True)\n",
+    "knn_scores = cross_validate(knn, X_train, y_train, return_train_score = True)\n",
     "print(\"Mean validation score %0.3f\" % (np.mean(scores[\"test_score\"])))\n",
     "pd.DataFrame(scores)"
    ]
@@ -684,7 +687,8 @@
     "    - Yes! Scale is based on how data was collected. \n",
     "    - Features on a smaller scale can be highly informative and there is no good reason to ignore them.\n",
     "    - We want our model to be robust and not sensitive to the scale. \n",
-    "- Was this a problem for decision trees?\n"
+    "- Was this a problem for decision trees?\n",
+    "\n"
    ]
   },
   {
@@ -1183,9 +1187,9 @@
     }
    ],
    "source": [
-    "pd.DataFrame(X_train_scaled, columns=X_train.columns, index=X_train.index).head().round(\n",
-    "    3\n",
-    ")"
+    "pd.DataFrame(X_train_scaled, columns=X_train.columns, index=X_train.index).head().round(3)\n",
+    "\n",
+    "pd.DataFrame(X_train_scaled, columns = X_train.columns, index = X_train.index).head().round(3)"
    ]
   },
   {
@@ -1539,6 +1543,7 @@
    ],
    "source": [
     "housing_df = pd.read_csv(DATA_DIR + \"housing.csv\")\n",
+    "train_df, test_df = train_test_split(housing_df, test_size = .1, random_state=123)\n",
     "train_df, test_df = train_test_split(housing_df, test_size=0.1, random_state=123)\n",
     "\n",
     "train_df.head()"
@@ -1564,6 +1569,27 @@
    },
    "source": [
     "Let's add some new features to the dataset which could help predicting the target: `median_house_value`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# essentially same as mutete in R\n",
+    "# Train\n",
+    "train_df = train_df.assign(rooms_per_household = train_df[\"total_rooms\"]/train_df[\"households\"]) # the total number of rooms per household\n",
+    "train_df = train_df.assign(bedrooms_per_household = train_df[\"total_bedrooms\"]/train_df[\"households\"]) # the number of bedrooms per household\n",
+    "train_df = train_df.assign(population_per_household = train_df[\"population\"] / train_df[\"households\"]) # the number of people reside in per household\n",
+    "\n",
+    "# Test\n",
+    "test_df = test_df.assign(rooms_per_household = test_df[\"total_rooms\"]/test_df[\"households\"])\n",
+    "test_df = test_df.assign(bedrooms_per_household = test_df[\"total_bedrooms\"]/test_df[\"households\"])\n",
+    "test_df = test_df.assign(population_per_household = test_df[\"population\"]/test_df[\"households\"])\n",
+    "\n",
+    "train_df.head()\n",
+    "test_df.head()"
    ]
   },
   {
@@ -1782,7 +1808,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = train_df.drop(columns=[\"population\", \"total_rooms\", \"total_bedrooms\"])\n",
+    "train_df = train_df.drop(columns=[\"population\", \"total_rooms\", \"total_bedrooms\"]) \n",
     "test_df = test_df.drop(columns=[\"population\", \"total_rooms\", \"total_bedrooms\"])"
    ]
   },
@@ -2366,7 +2392,7 @@
     "    scores = cross_validate(model, X_train, y_train, **kwargs)\n",
     "\n",
     "    mean_scores = pd.DataFrame(scores).mean()\n",
-    "    std_scores = pd.DataFrame(scores).std()\n",
+    "     std_scores = pd.DataFrame(scores).std()\n",
     "    out_col = []\n",
     "\n",
     "    for i in range(len(mean_scores)):\n",
@@ -2958,7 +2984,12 @@
     "imputer = SimpleImputer(strategy=\"median\")\n",
     "imputer.fit(X_train)\n",
     "X_train_imp = imputer.transform(X_train)\n",
-    "X_test_imp = imputer.transform(X_test)"
+    "X_test_imp = imputer.transform(X_test)\n",
+    "\n",
+    "imputer = SimpleImputer(strategy = \"median\")\n",
+    "imputer.fit(X_train)\n",
+    "X_train_imp = imputer(X_train)\n",
+    "X_test_imp = imputer(X_test)"
    ]
   },
   {
@@ -3471,6 +3502,11 @@
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train_imp)\n",
     "X_test_scaled = scaler.transform(X_test_imp)\n",
+    "pd.DataFrame(X_train_scaled, column = X_train.columns)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train_imp)\n",
+    "X_test_scaled = scaler.transform(X_test_imp)\n",
     "pd.DataFrame(X_train_scaled, columns=X_train.columns)"
    ]
   },
@@ -3697,13 +3733,23 @@
    ],
    "source": [
     "knn = KNeighborsRegressor()\n",
+    "scaler = StandardScaler()\n",
     "\n",
+    "X_train_scaled = scaler.fit_transform(X_train_imp)\n",
+    "X_test_scaled = scaler.fit_transform(X_test_imp)\n",
+    "knn.fit(X_train_scaled)\n",
+    "cv_train_scores = cross_validate(knn, X_train_scaled, y_train, return_train_score =True)\n",
+    "\n",
+    "\n",
+    "knn = KNeighborsRegressor()\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(X_train_imp)\n",
     "X_train_scaled = scaler.transform(X_train_imp)\n",
     "X_test_scaled = scaler.transform(X_test_imp)\n",
     "scores = cross_validate(knn, X_train_scaled, y_train, return_train_score=True)\n",
-    "pd.DataFrame(scores)"
+    "pd.DataFrame(scores)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -3790,7 +3836,13 @@
     "        (\"scaler\", StandardScaler()),\n",
     "        (\"regressor\", KNeighborsRegressor()),\n",
     "    ]\n",
-    ")"
+    ")\n",
+    "\n",
+    "from sklearn.pipeline import pipeline\n",
+    "\n",
+    "pipe = pipeline(steps = [(\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "                         (\"scaler\", StandardScaler()),\n",
+    "                         (\"knn_reg\", KNeighborsRegressor())])"
    ]
   },
   {
@@ -4441,7 +4493,9 @@
     "results_dict[\"imp + scaling + knn\"] = mean_std_cross_val_scores(\n",
     "    pipe, X_train, y_train, return_train_score=True\n",
     ")\n",
-    "pd.DataFrame(results_dict).T"
+    "pd.DataFrame(results_dict).T\n",
+    "\n",
+    "mean_std_cross_val_scores(pipe, X_train, y_train, return_train_score = True)"
    ]
   },
   {
@@ -4970,6 +5024,21 @@
     "        ]\n",
     "    }\n",
     ")\n",
+    "\n",
+    "pd.DataFrame({\"language\": [\"English\",\n",
+    "                           \"Vietnamese\",\n",
+    "                           \"English\",\n",
+    "                           \"Mandarin\",\n",
+    "                           \"English\",\n",
+    "                           \"English\"\n",
+    "                           \"Mandarin\",\n",
+    "                           \"English\",\n",
+    "                           \"Vietnamese\",\n",
+    "                           \"Mandarin\",\n",
+    "                           \"French\",\n",
+    "                           \"Spanish\",\n",
+    "                           \"Mandarin\",\n",
+    "                           \"Hindi\"]})\n",
     "X_toy"
    ]
   },
@@ -5121,6 +5190,12 @@
    ],
    "source": [
     "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "ord_enc <- OrdinalEncoder()\n",
+    "ord_enc.fit(X_toy)\n",
+    "X_toy_ord <- ord_enc.transform(X_toy)\n",
+    "df = pd.DataFrame(data = X_toy, columns = [\"language_enc\"], index = X_toy.index)\n",
+    "pd.concat([X_toy, df], axis = 1)\n",
     "\n",
     "enc = OrdinalEncoder()\n",
     "enc.fit(X_toy)\n",
@@ -5383,6 +5458,14 @@
    ],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "ohe_enc <- OneHotEncoder(sparse_output = False, handle_unknown = \"ignore\")\n",
+    "ohe_enc.fit(X_toy)\n",
+    "X_toy_ohe <- ohe_enc.transform(X_toy)\n",
+    "pd.DataFrame(X_toy_ohe, columns = ohe_enc.get_feature_names_out([\"language\"]), index = X_toy.index)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "enc = OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False)\n",
     "enc.fit(X_toy)\n",
@@ -5732,16 +5815,7 @@
    "name": "conda-env-cpsc330-py"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "name": "python"
   }
  },
  "nbformat": 4,
