--- a/lectures/201-Lecuyer-lectures/06_column-transformer-text-feats.ipynb
+++ b/lectures/201-Lecuyer-lectures/06_column-transformer-text-feats.ipynb
@@ -64,7 +64,25 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n",
+      "\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n",
+      "\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n",
+      "\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[1;32m      7\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minline\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -2290,7 +2308,7 @@
     }
    ],
    "source": [
-    "pd.DataFrame(transformed, columns=column_names)"
+    "pd.DataFrame(transformed, columns = column_names)"
    ]
   },
   {
@@ -2343,7 +2361,8 @@
     }
    ],
    "source": [
-    "pipe = make_pipeline(ct, SVC())\n",
+    "pipe = make_pipeline(ct, \n",
+    "                     SVC())\n",
     "pipe.fit(X, y)\n",
     "pipe.predict(X)"
    ]
@@ -2865,7 +2884,7 @@
     "1. You could carry out cross-validation by passing a `ColumnTransformer` object to `cross_validate`. \n",
     "2. After applying column transformer, the order of the columns in the transformed data has to be the same as the order of the columns in the original data. \n",
     "3. After applying a column transformer, the transformed data is always going to be of different shape than the original data. \n",
-    "4. When you call `fit_transform` on a `ColumnTransformer` object, you get a numpy ndarray. "
+    "4. **When you call `fit_transform` on a `ColumnTransformer` object, you get a numpy ndarray.** (correct)\n"
    ]
   },
   {
@@ -3685,10 +3704,7 @@
    "outputs": [],
    "source": [
     "ct = make_column_transformer(\n",
-    "    (\n",
-    "        make_pipeline(SimpleImputer(), StandardScaler()),\n",
-    "        numeric_feats,\n",
-    "    ),  # scaling on numeric features\n",
+    "    (make_pipeline(SimpleImputer(), StandardScaler()), numeric_feats,),  # scaling on numeric features\n",
     "    (\"passthrough\", passthrough_feats),  # no transformations on the binary features    \n",
     "    (OneHotEncoder(), categorical_feats),  # OHE on categorical features\n",
     "    (\"drop\", drop_feats),  # drop the drop features\n",
@@ -4217,11 +4233,7 @@
     }
    ],
    "source": [
-    "column_names = (\n",
-    "    numeric_feats\n",
-    "    + passthrough_feats    \n",
-    "    + ct.named_transformers_[\"onehotencoder\"].get_feature_names_out().tolist()\n",
-    ")\n",
+    "column_names = (numeric_feats + passthrough_feats + ct.named_transformers_[\"onehotencoder\"].get_feature_names_out().tolist())\n",
     "column_names"
    ]
   },
@@ -4251,6 +4263,7 @@
     }
    ],
    "source": [
+    "column_names = (numberic_feats + passthrough_feats + ct.named_transformers_[\"onehotencoder\"].get_feature_names_out().tolist())\n",
     "ct.get_feature_names_out()"
    ]
   },
@@ -4966,6 +4979,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_toy = X[[\"class_attendence\"]]\n",
+    "ordinal_class_enc = OrdinalEncoder()\n",
+    "ordinal_class_enc.fit(X_toy)\n",
+    "X_class_transformed = ordinal_class_enc.transform(X_toy)\n",
+    "\n",
+    "X_class_transformed_df = pd.DataFrame(X_class_tranformed, column = [\"class_attendance_ohe\"], index = X_toy.index)\n",
+    "pd.concat([X_class_transformed_df, X_toy])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -5158,11 +5186,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'OrdinalEncoder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n",
+      "\u001b[1;32m      1\u001b[0m class_attendance_levels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPoor\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAverage\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGood\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExcellent\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[1;32m      3\u001b[0m class_attendance_levels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPoor\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAverage\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGood\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExcellent\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[0;32m----> 4\u001b[0m attendance_ord_encoder \u001b[38;5;241m=\u001b[39m \u001b[43mOrdinalEncoder\u001b[49m(categories \u001b[38;5;241m=\u001b[39m [class_attendance_levels], dtype \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m)\n",
+      "\u001b[1;32m      6\u001b[0m attendance_ord_encoder\u001b[38;5;241m.\u001b[39mfit(X_toy[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclass_attendance\u001b[39m\u001b[38;5;124m\"\u001b[39m]])\n",
+      "\u001b[1;32m      7\u001b[0m attendance_ord_encoder\u001b[38;5;241m.\u001b[39mtransform(X_toy[[]])\n",
+      "\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'OrdinalEncoder' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "class_attendance_levels = [\"Poor\", \"Average\", \"Good\", \"Excellent\"]"
+    "class_attendance_levels = [\"Poor\", \"Average\", \"Good\", \"Excellent\"]\n",
+    "\n",
+    "class_attendance_levels = [\"Poor\", \"Average\", \"Good\", \"Excellent\"]\n",
+    "attendance_ord_encoder = OrdinalEncoder(categories = [class_attendance_levels], dtype = int)\n",
+    "\n",
+    "attendance_ord_encoder.fit(X_toy[[\"class_attendance\"]])\n",
+    "X_toy_ordinal_df = attendance_ord_encoder.transform(X_toy[[\"class_attendance\"]])\n",
+    "pd.DataFrame(X_toy_ordinal_df, columns = [\"class_attendance_enc\"], index = X_toy.index)\n"
    ]
   },
   {
@@ -5730,6 +5783,48 @@
    ],
    "source": [
     "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mine\n",
+    "numeric_feats = [\"lab1\", \"lab2\", \"lab3\", \"lab4\", \"quiz1\"]\n",
+    "ordinal_feats = [\"class_attendance\", \"university_years\"]\n",
+    "    class_attendance_order = [\"Poor\", \"Average\", \"Good\", \"Excellent\"]\n",
+    "    university_years_order = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "cate_feats = [\"major\"]\n",
+    "passthrough_feats = [\"enjoy_course\", \"ml_experience\"]\n",
+    "drop_feats = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mine\n",
+    "cl_transformer = make_column_transformer((make_pipeline(SimpleImputer(strategy = \"median\"), \n",
+    "                                                        StandardScaler()), numeric_feats),\n",
+    "                                         (OrdinalEncoder(categories = [class_attendance_order, university_years_order], dtype = int), ordinal_feats),\n",
+    "                                         (OneHotEncoder(handle_unknown = \"ignore\", sparse_output = False), cate_feats),\n",
+    "                                         (\"passthrough\", passthrough_feats),\n",
+    "                                         (\"drop\", drop_feats))\n",
+    "transformed_X = cl_transformer.fit_transform(X)\n",
+    "col_names = (numeric_feats + ordinal_feats + cl_transformer.named_transformers[\"onehotencoder\"].get_feature_names_out().tolist() + passthrough_feats)\n",
+    "\n",
+    "pd.DataFrame(transformed_X, columns = col_names, index = X.index)\n",
+    "\n",
+    "cl_pipeline = make_pipeline(cl_transformer, SVC())\n",
+    "cl_pipeline.fit(X)\n",
+    "cv_scores = cross_validate(cl_pipeline, X, y, return_train_scores = True)\n",
+    "\n",
+    "pd.DataFrame(cv_scores)"
    ]
   },
   {
@@ -8012,7 +8107,9 @@
     "        OneHotEncoder(handle_unknown=\"ignore\"),\n",
     "        categorical_feats,\n",
     "    ),  # OHE on categorical features\n",
-    ")"
+    ")\n",
+    "\n",
+    "# *****"
    ]
   },
   {
@@ -9139,8 +9236,8 @@
     }
    },
    "source": [
-    "```{note}\n",
-    "In the Natural Language Processing (NLP) community text data  is referred to as a **corpus** (plural: corpora). ```   "
+    "\n",
+    "> **In the Natural Language Processing (NLP) community text data  is referred to as a **corpus** (plural: corpora).** ```   "
    ]
   },
   {
@@ -9574,7 +9671,7 @@
     "vec = CountVectorizer()\n",
     "X_counts = vec.fit_transform(toy_df[\"sms\"])\n",
     "bow_df = pd.DataFrame(\n",
-    "    X_counts.toarray(), columns=vec.get_feature_names_out(), index=toy_df[\"sms\"]\n",
+    "    X_counts.toarray(), columns=vec.get_feature_names_out(), index=toy_df[\"sms\"] #***\n",
     ")\n",
     "bow_df"
    ]
@@ -9607,9 +9704,13 @@
     }
    },
    "source": [
-    "```{important}\n",
-    "Note that unlike other transformers we are passing a `Series` object to `fit_transform`. For other transformers, you can define one transformer for more than one columns. But with `CountVectorizer` you need to define separate `CountVectorizer` transformers for each text column, if you have more than one text columns.    \n",
-    "```"
+    "\n",
+    "> **Note**\n",
+    ">\n",
+    "> ***Unlike other transformers, we are now passing a `Series` object to `fit_transform`.*** \n",
+    ">\n",
+    "> ***For other transformers, you can define one transformer for more than one columns. But with `CountVectorizer` you need to define separate `CountVectorizer` transformers for <u>each text column</u>, if you have more than one text columns***    \n",
+    "\n"
    ]
   },
   {
@@ -9678,13 +9779,9 @@
    "source": [
     "print(\"The total number of elements: \", np.prod(X_counts.shape))\n",
     "print(\"The number of non-zero elements: \", X_counts.nnz)\n",
-    "print(\n",
-    "    \"Proportion of non-zero elements: %0.4f\" % (X_counts.nnz / np.prod(X_counts.shape))\n",
-    ")\n",
-    "print(\n",
-    "    \"The value at cell 3,%d is: %d\"\n",
-    "    % (vec.vocabulary_[\"jackpot\"], X_counts[3, vec.vocabulary_[\"jackpot\"]])\n",
-    ")"
+    "print(\"Proportion of non-zero elements: %0.4f\" % (X_counts.nnz / np.prod(X_counts.shape)))\n",
+    "\n",
+    "print(\"The value at cell 3,%d is: %d\" % (vec.vocabulary_[\"jackpot\"], X_counts[3, vec.vocabulary_[\"jackpot\"]]))"
    ]
   },
   {
@@ -9697,7 +9794,8 @@
    "source": [
     "\n",
     "Question for you\n",
-    "- What would happen if you apply `StandardScaler` on sparse data? "
+    "- What would happen if you apply `StandardScaler` on sparse data? \n",
+    "> ***This destroys the sparsity, converting the sparse matrix into a dense one, which can explode memory usage.*** ***"
    ]
   },
   {
@@ -9711,7 +9809,7 @@
     "### `OneHotEncoder` and sparse features \n",
     "- By default, `OneHotEncoder` also creates sparse features. \n",
     "- You could set `sparse=False` to get a regular `numpy` array. \n",
-    "- If there are a huge number of categories, it may be beneficial to keep them sparse.\n",
+    "- **If there are a huge number of categories, it may be beneficial to keep them sparse.**\n",
     "- For smaller number of categories, it doesn't matter much."
    ]
   },
@@ -10178,10 +10276,10 @@
    ],
    "source": [
     "vec = CountVectorizer()\n",
+    "\n",
     "X_counts = vec.fit_transform(toy_df[\"sms\"])\n",
-    "bow_df = pd.DataFrame(\n",
-    "    X_counts.toarray(), columns=vec.get_feature_names_out(), index=toy_df[\"sms\"]\n",
-    ")\n",
+    "\n",
+    "bow_df = pd.DataFrame(X_counts.toarray(), columns=vec.get_feature_names_out(), index=toy_df[\"sms\"])\n",
     "bow_df"
    ]
   },
@@ -10913,13 +11011,11 @@
     }
    },
    "source": [
-    "```{note}\n",
     "Notice that `vec8` and `vec8_binary` have different vocabularies, which is kind of unexpected behaviour and doesn't match the documentation of `scikit-learn`. \n",
     "\n",
     "[Here](https://github.com/scikit-learn/scikit-learn/blob/master/sklearn/feature_extraction/text.py#L1206-L1225) is the code for `binary=True` condition in `scikit-learn`. As we can see, the binarization is done before limiting the features to `max_features`, and so now we are actually looking at the document counts (in how many documents it occurs) rather than term count. This is not explained anywhere in the documentation. \n",
     "\n",
-    "The ties in counts between different words can be confusing. I don't think it will significantly impact the results, but it’s good to be aware of! Remember that the developers of scikit-learn are human and may introduce some inconsistencies. It's always a good habit to question the tools we use from time to time.\n",
-    "```"
+    "The ties in counts between different words can be confusing. I don't think it will significantly impact the results, but it’s good to be aware of! Remember that the developers of scikit-learn are human and may introduce some inconsistencies. It's always a good habit to question the tools we use from time to time.\n"
    ]
   },
   {
@@ -11015,8 +11111,7 @@
     "pd.DataFrame(\n",
     "    data=X_counts.sum(axis=0).tolist()[0],\n",
     "    index=vec8.get_feature_names_out(),\n",
-    "    columns=[\"counts\"],\n",
-    ").sort_values(\"counts\", ascending=False)"
+    "    columns=[\"counts\"],).sort_values(\"counts\", ascending=False)"
    ]
   },
   {
@@ -11667,12 +11762,20 @@
     "- (A) `handle_unknown=\"ignore\"` would treat all unknown categories equally. \n",
     "- (B) As you increase the value for `max_features` hyperparameter of `CountVectorizer` the training score is likely to go up. \n",
     "- (C) Suppose you are encoding text data using `CountVectorizer`. If you encounter a word in the validation or the test split that's not available in the training data, we'll get an error. \n",
+    "    > Default Behavior: Unlike OneHotEncoder with handle_unknown=\"error\", CountVectorizer inherently \"ignores\" unknown words without a special parameter.\n",
+    "    >\n",
+    "    > Conclusion: \n",
+    "    >\n",
+    "    > **False**. You won’t get an error—CountVectorizer silently ignores words in validation/test data that weren’t in the training vocabulary.\n",
+    "    > \n",
+    "    >\n",
     "- (D) In the code below, inside `cross_validate`, each fold might have slightly different number of features (columns) in the fold.\n",
     "\n",
-    "```\n",
-    "pipe = (CountVectorizer(), SVC())\n",
-    "cross_validate(pipe, X_train, y_train)\n",
-    "```"
+    "    > pipe = (CountVectorizer(), SVC())\n",
+    "    >\n",
+    "    > cross_validate(pipe, X_train, y_train)\n",
+    "    >\n",
+    "    > "
    ]
   },
   {
@@ -11728,16 +11831,7 @@
    "name": "conda-env-cpsc330-py"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "name": "python"
   }
  },
  "nbformat": 4,
