edit to lec 12 note

--- a/lectures/201-Lecuyer-lectures/05_preprocessing-pipelines.ipynb
+++ b/lectures/201-Lecuyer-lectures/05_preprocessing-pipelines.ipynb
@@ -5723,10 +5723,9 @@
     }
    },
    "source": [
-    "```{seealso} \n",
-    "One-hot encoded variables are also referred to as **dummy variables**. \n",
-    "You will often see people using [`get_dummies` method of pandas](https://pandas.pydata.org/docs/reference/api/pandas.get_dummies.html) to convert categorical variables into dummy variables. That said, using `sklearn`'s `OneHotEncoder` has the advantage of making it easy to treat training and test set in a consistent way.  \n",
-    "```"
+    "\n",
+    ">One-hot encoded variables are also referred to as **dummy variables**. \n",
+    ">You will often see people using [`get_dummies` method of pandas](https://pandas.pydata.org/docs/reference/api/pandas.get_dummies.html) to convert categorical variables into dummy variables. That said, using `sklearn`'s `OneHotEncoder` has the advantage of making it easy to treat training and test set in a consistent way.  \n"
    ]
   },
   {
