--- a/lectures/201-Lecuyer-lectures/06_column-transformer-text-feats.ipynb
+++ b/lectures/201-Lecuyer-lectures/06_column-transformer-text-feats.ipynb
@@ -5804,31 +5804,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mine\n",
-    "cl_transformer = make_column_transformer((make_pipeline(SimpleImputer(strategy = \"median\"), \n",
-    "                                                        StandardScaler()), numeric_feats),\n",
-    "                                         (OrdinalEncoder(categories = [class_attendance_order, university_years_order], dtype = int), ordinal_feats),\n",
-    "                                         (OneHotEncoder(handle_unknown = \"ignore\", sparse_output = False), cate_feats),\n",
-    "                                         (\"passthrough\", passthrough_feats),\n",
-    "                                         (\"drop\", drop_feats))\n",
-    "transformed_X = cl_transformer.fit_transform(X)\n",
-    "col_names = (numeric_feats + ordinal_feats + cl_transformer.named_transformers[\"onehotencoder\"].get_feature_names_out().tolist() + passthrough_feats)\n",
-    "\n",
-    "pd.DataFrame(transformed_X, columns = col_names, index = X.index)\n",
-    "\n",
-    "cl_pipeline = make_pipeline(cl_transformer, SVC())\n",
-    "cl_pipeline.fit(X)\n",
-    "cv_scores = cross_validate(cl_pipeline, X, y, return_train_scores = True)\n",
-    "\n",
-    "pd.DataFrame(cv_scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
@@ -9236,8 +9211,8 @@
     }
    },
    "source": [
-    "\n",
-    "> **In the Natural Language Processing (NLP) community text data  is referred to as a **corpus** (plural: corpora).** ```   "
+    "```{note}\n",
+    "In the Natural Language Processing (NLP) community text data  is referred to as a **corpus** (plural: corpora). ```   "
    ]
   },
   {
@@ -9705,11 +9680,7 @@
    },
    "source": [
     "\n",
-    "> **Note**\n",
-    ">\n",
-    "> ***Unlike other transformers, we are now passing a `Series` object to `fit_transform`.*** \n",
-    ">\n",
-    "> ***For other transformers, you can define one transformer for more than one columns. But with `CountVectorizer` you need to define separate `CountVectorizer` transformers for <u>each text column</u>, if you have more than one text columns***    \n",
+    "> ***Note that unlike other transformers we are passing a `Series` object to `fit_transform`. For other transformers, you can define one transformer for more than one columns. But with `CountVectorizer` you need to define separate `CountVectorizer` transformers for each text column, if you have more than one text columns.    \n",
     "\n"
    ]
   },
@@ -9779,9 +9750,13 @@
    "source": [
     "print(\"The total number of elements: \", np.prod(X_counts.shape))\n",
     "print(\"The number of non-zero elements: \", X_counts.nnz)\n",
-    "print(\"Proportion of non-zero elements: %0.4f\" % (X_counts.nnz / np.prod(X_counts.shape)))\n",
-    "\n",
-    "print(\"The value at cell 3,%d is: %d\" % (vec.vocabulary_[\"jackpot\"], X_counts[3, vec.vocabulary_[\"jackpot\"]]))"
+    "print(\n",
+    "    \"Proportion of non-zero elements: %0.4f\" % (X_counts.nnz / np.prod(X_counts.shape))\n",
+    ")\n",
+    "print(\n",
+    "    \"The value at cell 3,%d is: %d\"\n",
+    "    % (vec.vocabulary_[\"jackpot\"], X_counts[3, vec.vocabulary_[\"jackpot\"]])\n",
+    ")"
    ]
   },
   {
@@ -9795,7 +9770,7 @@
     "\n",
     "Question for you\n",
     "- What would happen if you apply `StandardScaler` on sparse data? \n",
-    "> ***This destroys the sparsity, converting the sparse matrix into a dense one, which can explode memory usage.*** ***"
+    "> This destroys the sparsity, converting the sparse matrix into a dense one, which can explode memory usage. ***"
    ]
   },
   {
@@ -9809,7 +9784,7 @@
     "### `OneHotEncoder` and sparse features \n",
     "- By default, `OneHotEncoder` also creates sparse features. \n",
     "- You could set `sparse=False` to get a regular `numpy` array. \n",
-    "- **If there are a huge number of categories, it may be beneficial to keep them sparse.**\n",
+    "- If there are a huge number of categories, it may be beneficial to keep them sparse.\n",
     "- For smaller number of categories, it doesn't matter much."
    ]
   },
@@ -10276,10 +10251,10 @@
    ],
    "source": [
     "vec = CountVectorizer()\n",
-    "\n",
     "X_counts = vec.fit_transform(toy_df[\"sms\"])\n",
-    "\n",
-    "bow_df = pd.DataFrame(X_counts.toarray(), columns=vec.get_feature_names_out(), index=toy_df[\"sms\"])\n",
+    "bow_df = pd.DataFrame(\n",
+    "    X_counts.toarray(), columns=vec.get_feature_names_out(), index=toy_df[\"sms\"]\n",
+    ")\n",
     "bow_df"
    ]
   },
