--- a/lectures/201-Lecuyer-lectures/12_ensembles.ipynb
+++ b/lectures/201-Lecuyer-lectures/12_ensembles.ipynb
@@ -4,17 +4,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "![](../img/330-banner.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "-"
     }
    },
@@ -63,7 +52,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
+    " \n",
     "%matplotlib inline\n",
     "import string\n",
     "import sys\n",
@@ -213,7 +202,7 @@
     "    - Interpretable \n",
     "    - They can capture non-linear relationships\n",
     "    - They don't require scaling of the data and theoretically can work with categorical features and missing values. \n",
-    "- But single decision trees are likely to overfit. "
+    "- **But**: Single decision trees are likely to overfit. "
    ]
   },
   {
@@ -1148,6 +1137,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
+    "\n",
     "y_train_num = label_encoder.fit_transform(y_train)\n",
     "y_test_num = label_encoder.transform(y_test)"
    ]
@@ -1217,9 +1207,8 @@
    "outputs": [],
    "source": [
     "dummy = DummyClassifier()\n",
-    "results[\"Dummy\"] = mean_std_cross_val_scores(\n",
-    "    dummy, X_train, y_train_num, return_train_score=True, scoring=scoring_metric\n",
-    ")"
+    "results[\"Dummy\"] = mean_std_cross_val_scores(dummy, X_train, y_train_num, return_train_score=True, \n",
+    "                                            scoring=scoring_metric)"
    ]
   },
   {
@@ -1312,9 +1301,8 @@
    ],
    "source": [
     "pipe_dt = make_pipeline(preprocessor, DecisionTreeClassifier(random_state=123))\n",
-    "results[\"Decision tree\"] = mean_std_cross_val_scores(\n",
-    "    pipe_dt, X_train, y_train_num, return_train_score=True, scoring=scoring_metric\n",
-    ")\n",
+    "results[\"Decision tree\"] = mean_std_cross_val_scores(pipe_dt, X_train, y_train_num, \n",
+    "                                                     return_train_score=True, scoring=scoring_metric)\n",
     "pd.DataFrame(results).T"
    ]
   },
@@ -1322,14 +1310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Decision tree is clearly overfitting. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br><br><br><br>"
+    "Decision tree is clearly overfitting!!"
    ]
   },
   {
@@ -1342,7 +1323,7 @@
    "source": [
     "## Random forests \n",
     "\n",
-    "![](../img/eva-forest.jpg)"
+    "<img src=\"../img/eva-forest.jpg\" width=\"25%\">"
    ]
   },
   {
@@ -1357,7 +1338,7 @@
     "\n",
     "- A single decision tree is likely to overfit\n",
     "- Use a collection of diverse decision trees\n",
-    "- Each tree overfits on some part of the data but we can reduce overfitting by averaging the results \n",
+    "- Each tree overfits on some part of the data but we can **reduce overfitting by averaging the results**: \n",
     "    - can be shown mathematically"
    ]
   },
@@ -1486,8 +1467,8 @@
    "source": [
     "### How do they work? \n",
     "\n",
-    "- Decide how many decision trees we want to build\n",
-    "    - can control with `n_estimators` hyperparameter \n",
+    "- Decide how many decision trees we want to build:\n",
+    "    - can control with <u>`n_estimators` hyperparameter</u>.\n",
     "- `fit` a diverse set of that many decision trees by **injecting randomness** in the model construction\n",
     "- `predict` by voting (classification) or averaging (regression) of predictions given by individual models"
    ]
@@ -5464,16 +5445,7 @@
    "name": "conda-env-cpsc330-py"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "name": "python"
   }
  },
  "nbformat": 4,
